@@ -1,3 +1,10 @@
+2002-12-18  Diego Gonzalez   <diego@pemas.net>
+
+	* libgnomevfs/gnome-vfs-job.h:
+	spelling fix
+	* libgnomevfs/gnome-vfs-handle.h:
+	add the description of GnomeVFSHandle
+
 2002-12-18  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
